# cme-arrival-time-prediction

./: .gitignore  README.md  clean_nn_data.py  cme_training_pytorch.py  cme_training_script.py  fix_cme01_columns.py  pyproject.toml  remove_ea_raw.py  verify_data_format.py
archive/: cme_arrival_corrections_NN_v2.py
data/01_2010-04-03/: Arrival_time.txt  Erupt_time.txt  Train_01_2010-04-03_AB_LR.txt  Train_01_2010-04-03_AB_NN.txt  time_elongation_A.txt  time_elongation_B.txt
data/02_2010-05-23/: Arrival_time.txt  Erupt_time.txt  Train_02_2010-05-23_AB_LR.txt  Train_02_2010-05-23_AB_NN.txt  time_elongation_A.txt  time_elongation_B.txt
data/03_2010-08-01/: Arrival_time.txt  Erupt_time.txt  Train_03_2010-08-01_AB_LR.txt  Train_03_2010-08-01_AB_NN.txt  time_elongation_A.txt  time_elongation_B.txt
data/04_2011-09-06/: Arrival_time.txt  Erupt_time.txt  Train_04_2011-09-06_AB_LR.txt  Train_04_2011-09-06_AB_NN.txt  time_elongation_A.txt  time_elongation_B.txt
data/05_2011-09-13/: Arrival_time.txt  Erupt_time.txt  Train_05_2011-09-13_AB_LR.txt  Train_05_2011-09-13_AB_NN.txt  time_elongation_A.txt  time_elongation_B.txt
data/06_2011-10-22/: Arrival_time.txt  (+5 more)
new_data/: Train_01_2010-04-03_AB_NN.txt  Train_02_2010-05-23_AB_NN.txt  Train_03_2010-08-01_AB_NN.txt  Train_04_2011-09-06_AB_NN.txt  Train_05_2011-09-13_AB_NN.txt  Train_06_2011-10-22_AB_NN.txt  Train_07_2012-01-19_AB_NN.txt  Train_09_2012-06-14_AB_NN.txt  Train_10_2012-07-03_AB_NN.txt  Train_11_2012-07-12_AB_NN.txt  Train_12_2012-09-27_AB_NN.txt  Train_13_2012-10-05_AB_NN.txt  Train_15_2013-06-30_AB_NN.txt
(+42 files in other folders)
